Fixed add link and counter on small devices.

--- a/less/blocks/timeline/timeline.less
+++ b/less/blocks/timeline/timeline.less
@@ -85,9 +85,6 @@
 
     .timeline__add-link {
         font-size: 3.7vw;
-        @media(min-width: @desktop) {
-            font-size: 24px;
-        }
         font-weight: bold;
         line-height: normal;
 
@@ -95,14 +92,18 @@
         right: 0.33em;
         bottom: 0.2em;
 
+        display: none;
+
         color: #ffffff;
+        @media(min-width: @desktop) {
+            font-size: 24px;
+
+            display: inline-block;
+        }
     }
 
     .timeline__counter {
         font-size: 3.7vw;
-        @media(min-width: @desktop) {
-            font-size: 24px;
-        }
         font-weight: 200;
         line-height: normal;
 
@@ -110,7 +111,14 @@
         top: 0.5em;
         right: 0.83em;
 
+        display: none;
+
         color: #ffffff;
+        @media(min-width: @desktop) {
+            font-size: 24px;
+
+            display: inline-block;
+        }
     }
 
     .timeline__social {
